Update readme for v2.0.0 release

--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <title>Download Already Purchased</title>
 <style>
 a, a:active,
@@ -131,7 +131,7 @@ table table {
 
     <h2>Change History</h2>
     <ul>
-        <li>v2.0.0, 2025-01-29:<ul>
+        <li>v2.0.0, 2025-03-10:<ul>
             <li>CHANGE: Using zc158+ array-based language files.</li>
             <li>CHANGE: Using PHP short-array syntax and HTML-5 &lt;br&gt; tags.</li>
             <li>BUGFIX: Disable processing when a guest-checkout is in progress.</li>
